--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,15 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+
+  <%= fields_for :ingredients do |ing| %>
+    <%= ing.text_field :name %>
+    <%= ing.text_field :quantity %>
+  <% end %>
+
+  <%= fields_for :ingredients do |ing| %>
+    <%= ing.text_field :name %>
+    <%= ing.text_field :quantity %>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
