--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,14 @@
 <%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+<%= f.label :title %>
+<%= f.text_field :title %><br>
+<%= f.fields_for :ingredients do |ingredient| %>
+<%= ingredient.label :name %>
+<%= ingredient.text_field :name %><br>
+<%= ingredient.label :quantity %>
+<%= ingredient.text_field :quantity %><br>
+<%= ingredient.label :ingredient_type %>
+<%= ingredient.text_field :ingredient_type %>
+<% end %>
+<% f.submit %>
+<% end %>
