--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,16 +1,15 @@
 <%= form_for @recipe do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %><br>
-
-  <%= f.fields_for :ingredients do |ingredient| %>
-    <%= ingredient.label :name %>
-    <%= ingredient.text_field :name %><br>
-
-    <%= ingredient.label :quantity %>
-    <%= ingredient.text_field :quantity %><br>
-
-
-  <% end %>
-
+  <ul>
+	  <%= f.fields_for :ingredients do |ingredient| %>
+	  <li>
+	    <%= ingredient.label :name %>
+	    <%= ingredient.text_field :name %>
+	    <%= ingredient.label :quantity %>
+	    <%= ingredient.text_field :quantity %><br>
+	  </li>
+  	  <% end %>
+  <ul>
   <%= f.submit %>
 <% end %>
