--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,11 @@
-<%= render 'form', recipe: @recipe %>
+  <%= form_for @recipe do |f| %>
+  Title: <%= f.text_field :title %><br>
+  
+  <%= f.fields_for :ingredients do |ingredient| %>
+    Name: <%= ingredient.text_field :name %>
+    Quantity: <%= ingredient.text_field :quantity %><br>
+  <% end %>
+  <% link_to 'add ingredient', @recipe %>
+ 
+  <%= f.submit %>
+<% end %>
