--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,19 @@
+<h1>Add a new recipe!</h1>
+
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%= f.label :title %>
+  <%= f.text_field :title %><br><br>
+ 
+ Add Ingredients: <br>
+  <%= f.fields_for :ingredients do |i| %>
+ 
+    <%= i.label :name  %>
+    <%= i.text_field :name %><br>
+    
+    <%= i.label :quantity  %>
+    <%= i.text_field :quantity %><br>
+
+  <% end %>
+ 
+  <%= f.submit %>
 <% end %>
