--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,8 @@
+<h1>Recipe Index</h1>
+
 <ul>
 <% @recipes.each do |recipe| %>
+  <h4><%= recipe.title %></h4>
   <li><%= link_to recipe.title, recipe %></li>
 <% end %>
 </ul>
