--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,15 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+<br><br>
+  <h3>Ingredients</h3>
+  <%= f.fields_for :ingredients do |ing| %>
+    <%= ing.label :quantity %>
+    <%= ing.text_field :quantity %>
+    <%= ing.label :name %>
+    <%= ing.text_field :name %>
+  <br><br>
+  <% end %>
+<br>
+  <%= f.submit %>
+<% end %>
