--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,16 @@
+<h2> the recipe form </h2>
 <%= form_for @recipe do |f| %>
+  <%= f.label :recipe %>
   Title: <%= f.text_field :title %>
+ <h2> adds ingredients </h2>
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <%= ingredient.label :name %>
+    <%= ingredient.text_field :name %> <br>
+    <%= ingredient.label :quantity %>
+    <%= ingredient.text_field :quantity %> <br>
+  <% end %>
+
+    <%= link_to 'add ingredient', @recipe %>
+    <%=f.submit %>
+
 <% end %>
