--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,22 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+
+    <%= f.label :title %>
+    <br>
+    <%= f.text_field :title %>
+    <br>
+
+  <%= f.fields_for :ingredients do |ingr| %>
+
+    <%= ingr.label :name %>
+    <br>
+    <%= ingr.text_field :name %>
+    <br>
+    <%= ingr.label :quantity %>
+    <br>
+    <%= ingr.text_field :quantity %>
+    <br>
+
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
