--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,15 +1,16 @@
+<h1>Create a New Recipe</h1>
 <%= form_for @recipe do |f| %>
   <%= f.label :title %>
-  <%= f.text_field :title %><br>
+  <%= f.text_field :title %><br><br>
 
-  <%= f.fields_for :ingredints do |ing| %>
+  <%= f.fields_for :ingredients do |ing| %>
     <%= ing.label :name %>
-    <%= ing.text_field :name %><br><br>
+    <%= ing.text_field :name %><br>
 
     <%= ing.label :quantity %>
     <%= ing.text_field :quantity %><br><br>
 
     <br><br>
-    <%end%>
+  <%end%>
     <%= f.submit %>
 <% end %>
