--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,14 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%= f.text_field :title %><br>
+
+   <%= f.fields_for :ingredients do |i| %>
+    <%= i.label :name %>
+    <%= i.text_field :name %><br><br>
+
+     <%= i.label :quantity %>
+    <%= i.text_field :quantity %><br><br>
+
+     <br><br>
+    <%end%>
+    <%= f.submit %>
 <% end %>
