--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,12 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%= label_tag :title %><br> 
+  <%= f.text_field :title %><br>
+  <%= f.fields_for :ingredients do |ingredient| %>
+  	<%= ingredient.label :name, "Ingredient" %>
+  	<%= ingredient.text_field :name %>
+
+  	<%= ingredient.label :quantity %>
+  	<%= ingredient.text_field :quantity %><br>
+  <% end %>
+  <%= submit_tag "Create Recipe" %>
 <% end %>
