--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,15 @@
-<%= render 'form', recipe: @recipe %>
+
+<%= form_for @recipe do |f| %>
+  <%=  f.label :title %>
+  <%= f.text_field :title %><br><br>
+
+  <%= f.fields_for :ingredients do |ing| %>
+    <%= ing.label "ingredient" %>
+    <%= ing.text_field :name %><br>
+
+    <%= ing.label :quantity %>
+    <%= ing.text_field :quantity %><br><br>
+ 
+  <% end %>
+  <%= f.submit %>
+<% end %>
