--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,16 @@
-<%= render 'form', recipe: @recipe %>
+
+<%= form_for @recipe do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %><br>
+
+  <%= f.fields_for :ingredients do |quant| %>
+    <%= quant.label :name %>
+    <%= quant.text_field :name %><br>
+
+    <%= quant.label :quantity %>
+    <%= quant.text_field :quantity %><br>
+
+  <% end %>
+
+  <%= f.submit %>
+<% end %>
