--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,10 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+  <%= ingredient.label :name %>
+  <%= ingredient.text_field :name %><br>
+
+  <%= ingredient.label :street_address_2 %>
+  <%= ingredient.text_field :street_address_2 %><br>
 <% end %>
