--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,15 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%= f.label :title %>
+  <%= f.text_field :title %><br>
+
+  <%= f.fields_for :ingredients do |ingr| %>
+    <%= ingr.label :ingredient_name %>
+    <%= ingr.text_field :ingredient_name %><br>
+
+    <%= ingr.label :ingredient_quantity %>
+    <%= ingr.text_field :ingredient_quantity %><br>
+
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
