--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -3,11 +3,11 @@
   <%= f.text_field :title %><br>
 
   <%= f.fields_for :ingredients do |ingr| %>
-    <%= ingr.label :ingredient_name %>
-    <%= ingr.text_field :ingredient_name %><br>
+    <%= ingr.label :name %>
+    <%= ingr.text_field :name %><br>
 
-    <%= ingr.label :ingredient_quantity %>
-    <%= ingr.text_field :ingredient_quantity %><br>
+    <%= ingr.label :quantity %>
+    <%= ingr.text_field :quantity %><br>
 
   <% end %>
 
