--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,11 @@
-<%= render 'form', recipe: @recipe %>
+
+<%= form_for @recipe do |f| %>
+    Title: <%= f.text_field :title %>
+    <%= f.fields_for :ingredients do |ing| %>
+        Name: <%= ing.text_field :name %>
+        Quantity: <%= ing.text_field :quantity %>
+    <% end %>
+
+    <%= f.submit %>
+
+<% end %>
