--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,11 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+
+  Quantity: <%= ingredient.text_field :quantity %><br>
+  Name: <%= ingredient.text_field :name %><br>
+
+  <% end %>
+  <%= f.submit %>
 <% end %>
