--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,13 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+    <p><%= f.label :title %></p>
+    <%= f.text_field :title %>
+     <%= f.fields_for :ingredients do |ing| %>
+     <%= ing.label :name %>
+     <%= ing.text_field :name %>
+     <%= ing.label :quantity %>
+     <%= ing.text_field :quantity %>
+    <%end%>
+    <%= f.submit %>
+ 
+ <% end %>
+ 
