--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,17 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Recipe Title: <%= f.text_field :title %> <br>
+
+  <%= f.fields_for :ingredients do |ingr| %>
+    <%= ingr.label :name %>
+    <%= ingr.text_field :name %> <br>
+
+    <%= ingr.label :quantity %>
+    <%= ingr.text_field :quantity %> <br>
+
+  <% end %>
+  <br>
+  <br>
+
+  <%= f.submit %>
+
 <% end %>
