--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,17 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+
+<%= f.label :title, "Recipe Name" %> <br>
+<%= f.text_field :title %> <br>
+
+  <%= f.fields_for :ingredients do |ingredient|%>
+    <%= ingredient.label :name, "Ingredient Name:" %> <br>
+    <%= ingredient.text_field :name %> <br>
+
+    <%= ingredient.label :quantity, "Quantity:" %> <br>
+    <%= ingredient.text_field :quantity %> <br>
+
+  <% end %>
+  <%= f.submit %>
+
+
 <% end %>
