--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,23 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+
+  <p>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+  </p>
+
+  <p>
+  <%= f.fields_for :ingredients do |ing| %>
+    <%= ing.label :name %>
+    <%= ing.text_field :name %><br>
+
+    <%= ing.label :quantity %>
+    <%= ing.text_field :quantity %><br>
+
+  <% end %>
+  </p>
+
+  <p>
+  <%= f.submit %>
+  </p>
+  
+<% end %>
