--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,9 +1,5 @@
-<h2> <%= @recipe.title %></h2>
-
-<h3>Ingredients</h2>
-
 <ul>
-<% @recipe.ingredients.each do |ingredient| %>
-  <li><%= "#{ingredient.name} X #{ingredient.quantity}" %></li>
+<% @recipes.each do |recipe| %>
+  <li><%= recipe.title %></li>
 <% end %>
 </ul>
