--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,8 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br>
+  <%= f.fields_for :ingredients do |ing| %>
+    Ingredient: <%= ing.text_field :name %>
+    Quantity: <%= ing.text_field :quantity %>
+  <% end %><br>
+  <%= f.submit %>
 <% end %>
